  mode to be taken into account.

- Database entries for C- and N-terminal neutral lysine.

Bug fixes:

- When Configuration objects were copied, the cell parameters were not copied.
  The copy contained the cell parameters of the current configuration of the
  universe instead.

- Nonbonded list generation for periodic universes could in rare cases
  miss atom pairs inside the cutoff.

- NumPy compatibility fixes.

2.5.18 --> 2.5.19
=================

New features:

- PDB.PDBConfiguration contains crystallographic information read from the
  PDB file: the edge lengths of the cell (a, b, c, in units of nm), the
  unit cell angles (alpha, beta, gamma, in units of radians),
  the space group (space_group, a string), the crystallographic
  symmetry transformations corresponding to the space group
  (cs_transformations, a list of transformation objects), and the
  non-crystallographic symmetry transformations (ncs_transformations,
  a list of transformation objects). The transformations are transformed
  to Cartesian coordinates, so they can be applied directly to the
  atom positions.
  This information is available only if ScientificPython >= 2.7.5 is
  installed.

Improvements:

- Improved NumPy compatibility.

- Use the symeig package for normal modes if it is installed.

- universe.configuration() has been accelerated. The speedup can be
  very important (a factor of ten), but in most situations it is rather
  modest.

- AMBER atom types are handled as case-sensitive, as is done by the
  AMBER program.

- Better identification of protonation states in PDB files that contain
  hydrogens.


2.5.17 --> 2.5.18
=================

Bug fixes:

- The module lapack_mmtk that consisted of CLAPACK2 code and caused
  compilation problems with recent GCC versions was removed. Instead,
  CLAPACK3 routines from Numeric/numpy are used. They are also faster,
  but use more working memory.


2.5.16 --> 2.5.17
=================

Bug fixes:
